--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-Django==1.10.3
+Django==1.11.27
 MySQL-python==1.2.5
 argparse==1.2.1
-django-bootstrap3==7.1.0
+django-bootstrap3==12.0.3
 mysql==0.0.1
-wheel==0.24.0
-wsgiref==0.1.2
+pytz==2019.3
